﻿[B]Changelog[/B]
* Fixed: NPO live radio streams (Fixes #1061)
* Changed: renamed Uitzendinggemist to NPO Start (Fixes #1059)

[I]Previous Changes[/I]
* Fixed: NOS.nl streams did not start (Fixes #1048)
* Fixed: NPO shows within `Genres` would not list any items (Fixes #1037)
* Fixed: no images for A-Z listing (Fixes #1010)
* Changed: Moved `recent` items to own folder
* Added: use Widevine for Live streams if possible (so we have subtitles)
* Added: recent shows for the past days to the NPO channel (Fixes #990)
* Fixed: NPO live channels (Fixes #978)
* Fixed: NPO regex issue (Fixes #975)
* Fixed: npostart.nl url parameters are case sensitive (Fixes #971)
* Fixed: renamed npo.nl -> npostart.nl (Fixes #968)
* Fixed: NPO Live streams
* Added: times to NOS Journaal (Fixes #933)
* Fixed: NOS.nl only showed old videos (Fixes #912)
* Fixed: NTR School TV had some weird <null> items (Fixes #913)
* Fixed: NPO Search and paging
* Fixed: NPO Genres (Fixes #906)
* Fixed: NPO listing (Fixes #906)
* Fixed: NPO released a new site (Fixes #887)
* Fixed: perhaps not group the "Hele Lijst" listing from NPO to distinguish it better from the NPO native alphabet listing
* Changed: updated NPO urls to https
* Fixed: NPO 3 had voice-over subs (See #831)
* Fixed: Cleaned up NPO (See #831)
* Fixed: NPO loginFixed: NPO live streams (See #831)
* Fixed: NPO changed their API (Fixes #831)
* Fixed: NPO moved the subtitle (TT888) urls
* Fixed: Some live channels were missing (Fixes #804)
* Fixed: NPO "Titles with '..'" listings (Fixes #801)
* Added: NTR School.tv (Fixes #671)
* Fixed: NPO Radio streams
* Fixed: NPO update broke paging (Fixes #756)
* Fixed: Live TV channels and some video items for NPO did not show (Fixes #756)
* Fixed: Most of the NPO TV Live streams were missing (Fixes #704)
* Fixed: NPO Radio channels
* Fixed: NPO changed their URL scheme which broke parsing (Fixed #654)
* Fixed: Some NPO listings were empty due to site changes (Fixes #647)